--- a/finalProject.css
+++ b/finalProject.css
@@ -1,1 +1,32 @@
+#tooltip{
+    position: relative;
+    display: inline-block;
+    width: 250px;
+    height: auto;
+    padding: 15px;
+    background-color: white;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius;
+    -webkit-box-shadow: 5px 5px 10px rgba (0,0,0,0.5);
+    -moz-boz-shadow: 5px 5px 10px rgba (0,0,0,0.5);
+    box-shadow: 5px 5px 10px rgba (0,0,0,0.5);
+    pointer-events:none;
+}
 
+#tooltip.hidden{
+    display:none;
+}
+
+#tooltip p{
+    margin:0;
+    font-family: sans-serif;
+    font-size: 16px;
+    line-height: 20px;
+}
+
+h1, h2 {
+    text-align: center;
+}
+
+</style>
