--- a/finalProject.css
+++ b/finalProject.css
@@ -1,5 +1,5 @@
 #tooltip{
-    position: relative;
+    position: absolute;
     display: inline-block;
     width: 250px;
     height: auto;
@@ -23,10 +23,6 @@
     font-family: sans-serif;
     font-size: 16px;
     line-height: 20px;
-}
-
-h1, h2 {
-    text-align: center;
 }
 
 </style>
